fix sticky 100% on tablet

--- a/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
+++ b/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
@@ -820,13 +820,13 @@ body.bgtfw-edit-links-hidden .bgtfw-edit-link a {
 }
 
 @media only screen and (max-width: 768px) {
-  .blog[class*="col"]:not(.col1) main > article.post {
+  .blog[class*="col"]:not(.col1) main > article.post:not(.sticky) {
     width: calc((100% / 2 - .5vw) - 2vw);
   }
 }
 
 @media only screen and (max-width: 480px) {
-  .blog[class*="col"] main > article.post {
+  .blog[class*="col"] main > article.post:not(.sticky) {
     width: calc((100% / 1 - .5vw) - 2vw);
   }
 }
@@ -1170,13 +1170,13 @@ body.bgtfw-edit-links-hidden .bgtfw-edit-link a {
 }
 
 @media only screen and (max-width: 768px) {
-  .archive[class*="col"]:not(.col1) main > article.post {
+  .archive[class*="col"]:not(.col1) main > article.post:not(.sticky) {
     width: calc((100% / 2 - .5vw) - 2vw);
   }
 }
 
 @media only screen and (max-width: 480px) {
-  .archive[class*="col"] main > article.post {
+  .archive[class*="col"] main > article.post:not(.sticky) {
     width: calc((100% / 1 - .5vw) - 2vw);
   }
 }
